--- a/index.html
+++ b/index.html
@@ -2,33 +2,62 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Informatika Kelas X</title>
+  <title>Dani Ardani | Guru Informatika</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="../index.html">Dani Ardani</a>
+    <a class="navbar-brand" href="index.html">Dani Ardani</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">Tentang</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portofolio</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 
-<div class="container my-5">
-  <h2>Informatika Kelas X</h2>
-
-  <div class="accordion mt-4" id="materiX">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button">
-          Algoritma dan Flowchart
-        </button>
-      </h2>
-      <div class="accordion-body">
-        Materi pengantar algoritma dan representasi flowchart.
-      </div>
+<section class="bg-light py-5">
+  <div class="container text-center">
+    <h1 class="display-5 fw-bold">Dani Ardani</h1>
+    <p class="lead mt-3">
+      Guru Informatika SMA | Peneliti Microlearning & Problem Based Learning
+    </p>
+    <div class="mt-4">
+      <a href="portfolio.html" class="btn btn-primary btn-lg me-2">Lihat Portofolio</a>
+      <a href="about.html" class="btn btn-outline-secondary btn-lg">Tentang Saya</a>
     </div>
   </div>
-</div>
+</section>
 
+<section class="container py-5">
+  <div class="row text-center">
+    <div class="col-md-4 mb-4">
+      <h5>🎓 Pendidikan</h5>
+      <p>S2 Pendidikan dengan fokus pada pembelajaran Informatika</p>
+    </div>
+    <div class="col-md-4 mb-4">
+      <h5>💻 Informatika</h5>
+      <p>Pemrograman, Computational Thinking, dan Literasi Digital</p>
+    </div>
+    <div class="col-md-4 mb-4">
+      <h5>📘 Pembelajaran</h5>
+      <p>Microlearning berbasis LMS dan Problem Based Learning</p>
+    </div>
+  </div>
+</section>
+
+<footer class="bg-dark text-white text-center py-3">
+  <small>© 2026 Dani Ardani</small>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
