--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">Tentang</a></li>
         <li class="nav-item"><a class="nav-link" href="portfolio.html">Portofolio</a></li>
-        <li class="nav-item"><a class="nav-link active" href="teaching.html">Materi</a></li>
+        <li class="nav-item"><a class="nav-link" href="teaching.html">Materi</a></li>
       </ul>
     </div>
   </div>
