--- a/kelas/x.html
+++ b/kelas/x.html
@@ -4,56 +4,106 @@
   <meta charset="UTF-8">
   <title>Informatika Kelas X</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/css/style.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
 
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="../assets/css/style.css" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
 </head>
 <body>
 
+<!-- Navbar -->
 <nav class="navbar navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="../teaching.html">← Kembali ke Materi</a>
   </div>
 </nav>
 
+<!-- Content -->
 <div class="container py-5">
-  <h2>Informatika Kelas X</h2>
-  <p class="text-muted">Pengenalan konsep dasar Informatika</p>
 
-  <div class="accordion mt-4" id="kelasX">
+  <div class="mb-4">
+    <h2>Informatika Kelas X</h2>
+    <p class="text-muted">
+      Materi pembelajaran Informatika Kelas X SMA
+    </p>
+  </div>
+
+  <div class="accordion" id="kelasX">
+
+    <!-- SEMESTER 1 -->
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#x1">
-          Berpikir Komputasional
+        <button class="accordion-button" type="button"
+          data-bs-toggle="collapse" data-bs-target="#semester1">
+          📘 Semester 1
         </button>
       </h2>
-      <div id="x1" class="accordion-collapse collapse show">
+
+      <div id="semester1" class="accordion-collapse collapse show">
         <div class="accordion-body">
-          Konsep dekomposisi, abstraksi, dan algoritma.
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              Validasi sumber data, konsep struktur data & algoritma
+            </li>
+            <li class="list-group-item">
+              Pencarian informasi & etika digital
+            </li>
+            <li class="list-group-item">
+              Pengumpulan & visualisasi data
+            </li>
+            <li class="list-group-item">
+              Konsep dasar pemrograman
+            </li>
+          </ul>
         </div>
       </div>
     </div>
 
+    <!-- SEMESTER 2 -->
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#x2">
-          Algoritma dan Flowchart
+        <button class="accordion-button collapsed" type="button"
+          data-bs-toggle="collapse" data-bs-target="#semester2">
+          📗 Semester 2
         </button>
       </h2>
-      <div id="x2" class="accordion-collapse collapse">
+
+      <div id="semester2" class="accordion-collapse collapse">
         <div class="accordion-body">
-          Dasar penyusunan algoritma dan representasi flowchart.
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              Pseudocode & strategi algoritmik
+            </li>
+            <li class="list-group-item">
+              Aplikasi perkantoran & warga digital
+            </li>
+            <li class="list-group-item">
+              Siklus pengolahan data
+            </li>
+            <li class="list-group-item">
+              Program sederhana terstruktur
+            </li>
+          </ul>
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
+<!-- Footer -->
 <footer class="bg-dark text-white text-center py-3">
   <small>© 2026 Dani Ardani</small>
 </footer>
 
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
