--- a/kelas/x.html
+++ b/kelas/x.html
@@ -47,19 +47,27 @@
       <div id="semester1" class="accordion-collapse collapse show">
         <div class="accordion-body">
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              Validasi sumber data, konsep struktur data & algoritma
-            </li>
-            <li class="list-group-item">
-              Pencarian informasi & etika digital
-            </li>
-            <li class="list-group-item">
-              Pengumpulan & visualisasi data
-            </li>
-            <li class="list-group-item">
-              Konsep dasar pemrograman
-            </li>
-          </ul>
+  <li class="list-group-item">
+    <a href="x/s1-validasi-data.html" class="text-decoration-none">
+      Validasi sumber data, konsep struktur data & algoritma
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s1-etika-digital.html" class="text-decoration-none">
+      Pencarian informasi & etika digital
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s1-visualisasi-data.html" class="text-decoration-none">
+      Pengumpulan & visualisasi data
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s1-dasar-pemrograman.html" class="text-decoration-none">
+      Konsep dasar pemrograman
+    </a>
+  </li>
+</ul>
         </div>
       </div>
     </div>
@@ -75,20 +83,29 @@
 
       <div id="semester2" class="accordion-collapse collapse">
         <div class="accordion-body">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              Pseudocode & strategi algoritmik
-            </li>
-            <li class="list-group-item">
-              Aplikasi perkantoran & warga digital
-            </li>
-            <li class="list-group-item">
-              Siklus pengolahan data
-            </li>
-            <li class="list-group-item">
-              Program sederhana terstruktur
-            </li>
-          </ul>
+<ul class="list-group list-group-flush">
+  <li class="list-group-item">
+    <a href="x/s2-pseudocode.html" class="text-decoration-none">
+      Pseudocode & strategi algoritmik
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s2-aplikasi-perkantoran.html" class="text-decoration-none">
+      Aplikasi perkantoran & warga digital
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s2-siklus-data.html" class="text-decoration-none">
+      Siklus pengolahan data
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s2-program-terstruktur.html" class="text-decoration-none">
+      Program sederhana terstruktur
+    </a>
+  </li>
+</ul>
+
         </div>
       </div>
     </div>
