--- a/kelas/x.html
+++ b/kelas/x.html
@@ -49,22 +49,27 @@
           <ul class="list-group list-group-flush">
   <li class="list-group-item">
     <a href="x/s1-validasi-data.html" class="text-decoration-none">
-      Validasi sumber data, konsep struktur data & algoritma
+      Konsep Literasi Digital
     </a>
   </li>
   <li class="list-group-item">
     <a href="x/s1-etika-digital.html" class="text-decoration-none">
-      Pencarian informasi & etika digital
+      Pengertian Literasi Digital
     </a>
   </li>
   <li class="list-group-item">
     <a href="x/s1-visualisasi-data.html" class="text-decoration-none">
-      Pengumpulan & visualisasi data
+      Akses & Pemanfaatan Teknologi secara Efektif
     </a>
   </li>
   <li class="list-group-item">
     <a href="x/s1-dasar-pemrograman.html" class="text-decoration-none">
-      Konsep dasar pemrograman
+      Hak Cipta & Plagiarisme
+    </a>
+  </li>
+  <li class="list-group-item">
+    <a href="x/s1-dasar-pemrograman.html" class="text-decoration-none">
+      Literasi Digital di Era Artificial Intelligence
     </a>
   </li>
 </ul>
