--- a/kelas/x.html
+++ b/kelas/x.html
@@ -48,27 +48,27 @@
         <div class="accordion-body">
           <ul class="list-group list-group-flush">
   <li class="list-group-item">
-    <a href="x/s1-validasi-data.html" class="text-decoration-none">
+    <a href="x/Materi_Literasi_Digital.html" class="text-decoration-none">
       Konsep Literasi Digital
     </a>
   </li>
   <li class="list-group-item">
-    <a href="x/s1-etika-digital.html" class="text-decoration-none">
+    <a href="x/materi_pengertian_literasi_digital.html" class="text-decoration-none">
       Pengertian Literasi Digital
     </a>
   </li>
   <li class="list-group-item">
-    <a href="x/s1-visualisasi-data.html" class="text-decoration-none">
+    <a href="x/materi_ajar_informatika_akses_pemanfaatan_teknologi.html" class="text-decoration-none">
       Akses & Pemanfaatan Teknologi secara Efektif
     </a>
   </li>
   <li class="list-group-item">
-    <a href="x/s1-dasar-pemrograman.html" class="text-decoration-none">
+    <a href="x/materi_ajar_informatika_hak_cipta_plagiarisme.html" class="text-decoration-none">
       Hak Cipta & Plagiarisme
     </a>
   </li>
   <li class="list-group-item">
-    <a href="x/s1-dasar-pemrograman.html" class="text-decoration-none">
+    <a href="x/materi_ajar_informatika_literasi_digital_di_era_ai.html" class="text-decoration-none">
       Literasi Digital di Era Artificial Intelligence
     </a>
   </li>
